# py-sat-meas

./: .env.example  .gitignore  Claude.md  README.md  build_conda.bat  build_windows.bat  pyproject.toml  requirements-dev.txt  requirements.txt  roofscan.spec
docs/: roadmap.md  setup.md  sprint6_pending.md  training_plan.md  user_guide.md
roofscan/: __main__.py  config.py
roofscan/core/calculo/: area_calculator.py  classifier.py  geometry_merger.py  spatial_join.py
roofscan/core/deteccion/clasico/: morphology.py  spectral_indices.py
roofscan/core/deteccion/dl/: material_classifier.py  predictor.py  trainer.py  unet.py
roofscan/core/exportacion/: csv_exporter.py  geojson_exporter.py  raster_exporter.py  shp_exporter.py
roofscan/core/ingesta/: carto_arba.py  downloader.py  loader.py  safe_loader.py  wfs_arba.py
roofscan/core/preproceso/: cloud_mask.py  normalizer.py  pipeline.py  reprojector.py
roofscan/core/validacion/: feedback_store.py  metrics.py
roofscan/gui/: download_dialog.py  main_window.py  map_widget.py  results_panel.py  validation_panel.py
scripts/: batch_mensura.py  download_catastro.py  prepare_tiles.py  pretrain_unet.py  seleccionar_muestra.py  train_material_classifier.py
tests/: test_calculo.py  test_carto_arba.py  test_deteccion_clasico.py  test_dl.py  test_ingesta.py  test_material_classifier.py  test_preproceso.py  test_validacion.py
